--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Elm Make
+name: CI
 
 on:
   push:
@@ -13,4 +13,4 @@ jobs:
     - uses: jorelali/setup-elm@v2
       with:
         elm-version: 0.19.1
-    - run: elm make src/TrackJS.elm
+    - run: elm make src/Rollbar.elm
