Add example build to CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,12 @@ jobs:
       with:
         elm-version: 0.19.1
     - run: elm make src/TrackJS.elm
+  build-example:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: jorelali/setup-elm@v2
+      with:
+        elm-version: 0.19.1
+    - run: elm make Example.elm
+      working-directory: ./example
