--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,7 @@ jobs:
       with:
         elm-version: 0.19.1
     - run: elm make src/TrackJS.elm
+
   build-example:
     runs-on: ubuntu-latest
     steps:
@@ -23,3 +24,9 @@ jobs:
         elm-version: 0.19.1
     - run: elm make Example.elm
       working-directory: ./example
+
+  check-versions-match:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - run: ./test-version.sh
