--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,4 +13,20 @@ jobs:
     - uses: jorelali/setup-elm@v2
       with:
         elm-version: 0.19.1
-    - run: elm make src/Rollbar.elm
+    - run: elm make src/TrackJS.elm
+
+  build-example:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: jorelali/setup-elm@v2
+      with:
+        elm-version: 0.19.1
+    - run: elm make Example.elm
+      working-directory: ./example
+
+  check-versions-match:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - run: ./test-version.sh
