--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -10,3 +10,7 @@ updates:
     directory: "/example"
     schedule:
       interval: "weekly"
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
